tests/baselines/reference/YieldExpression10_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts(1,11): error TS1219: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts (1 errors) ====
    var v = { * foo() {
              ~
!!! error TS1219: Generators are only available when targeting ECMAScript 6 or higher.
        yield(foo);
      }
    }
    